fix: iphone input date range verticall align

--- a/styles/project/components/_date-range-selector.scss
+++ b/styles/project/components/_date-range-selector.scss
@@ -10,6 +10,7 @@
 
   &__input {
     padding-left: 25px;
+    line-height: 25px;
   }
 
   &.hide-icon {
